--- a/lang/en.json
+++ b/lang/en.json
@@ -6,6 +6,7 @@
     "A Timeout Occurred": "A Timeout Occurred",
     "Accept": "Accept",
     "Accepted": "Accepted",
+    "Account Password Login": "Account Password Login",
     "Action": "Action",
     "Actions": "Actions",
     "Add": "Add",
@@ -17,6 +18,7 @@
     "Already Reported": "Already Reported",
     "Archive": "Archive",
     "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
+    "Are you sure you want to log out?": "Are you sure you want to log out?",
     "Assign": "Assign",
     "Associate": "Associate",
     "Attach": "Attach",
@@ -25,6 +27,7 @@
     "Bandwidth Limit Exceeded": "Bandwidth Limit Exceeded",
     "Browse": "Browse",
     "Cancel": "Cancel",
+    "Captcha": "Captcha",
     "Choose": "Choose",
     "Choose :name": "Choose :name",
     "Choose File": "Choose File",
@@ -33,6 +36,7 @@
     "Click to copy": "Click to copy",
     "Client Closed Request": "Client Closed Request",
     "Close": "Close",
+    "Code": "Code",
     "Collapse": "Collapse",
     "Collapse All": "Collapse All",
     "Comment": "Comment",
@@ -74,6 +78,7 @@
     "Export": "Export",
     "Export :name": "Export :name",
     "Failed Dependency": "Failed Dependency",
+    "Failure": "Failure",
     "File": "File",
     "Files": "Files",
     "Forbidden": "Forbidden",
@@ -88,6 +93,7 @@
     "Hide": "Hide",
     "Hide :name": "Hide :name",
     "Home": "Home",
+    "Home Page": "Home Page",
     "HTTP Version Not Supported": "HTTP Version Not Supported",
     "I'm a teapot": "I'm a teapot",
     "If you did not create an account, no further action is required.": "If you did not create an account, no further action is required.",
@@ -157,7 +163,9 @@
     "Payload Too Large": "Payload Too Large",
     "Payment Required": "Payment Required",
     "Permanent Redirect": "Permanent Redirect",
+    "Phone": "Phone",
     "Please click the button below to verify your email address.": "Please click the button below to verify your email address.",
+    "Please enter :name": "Please enter :name",
     "Precondition Failed": "Precondition Failed",
     "Precondition Required": "Precondition Required",
     "Preview": "Preview",
@@ -165,12 +173,14 @@
     "Processing": "Processing",
     "Profile": "Profile",
     "Profile Information": "Profile Information",
+    "Prompt": "Prompt",
     "Proxy Authentication Required": "Proxy Authentication Required",
     "Railgun Error": "Railgun Error",
     "Range Not Satisfiable": "Range Not Satisfiable",
     "Record": "Record",
     "Regards": "Regards",
     "Register": "Register",
+    "Register Now": "Register Now",
     "Remember me": "Remember me",
     "Request Header Fields Too Large": "Request Header Fields Too Large",
     "Request Timeout": "Request Timeout",
@@ -193,6 +203,7 @@
     "Select": "Select",
     "Select All": "Select All",
     "Send": "Send",
+    "Send Verification Code": "Send Verification Code",
     "Server Error": "Server Error",
     "Service Unavailable": "Service Unavailable",
     "Session Has Expired": "Session Has Expired",
@@ -202,12 +213,15 @@
     "Show All": "Show All",
     "Showing": "Showing",
     "Sign In": "Sign In",
+    "SMS Verification Code": "SMS Verification Code",
+    "SMS Verification Code Login": "SMS Verification Code Login",
     "Solve": "Solve",
     "SSL Handshake Failed": "SSL Handshake Failed",
     "Start": "Start",
     "Stop": "Stop",
     "Submit": "Submit",
     "Subscribe": "Subscribe",
+    "Success": "Success",
     "Switch": "Switch",
     "Switch To Role": "Switch To Role",
     "Switching Protocols": "Switching Protocols",
@@ -243,11 +257,14 @@
     "URI Too Long": "URI Too Long",
     "Use Proxy": "Use Proxy",
     "User": "User",
+    "Username": "Username",
     "Variant Also Negotiates": "Variant Also Negotiates",
     "Verify Email Address": "Verify Email Address",
     "View": "View",
     "View :name": "View :name",
     "Web Server is Down": "Web Server is Down",
+    "Welcome": "Welcome",
+    "Welcome to :name!": "Welcome to :name!",
     "Whoops!": "Whoops!",
     "Yes": "Yes",
     "You are receiving this email because we received a password reset request for your account.": "You are receiving this email because we received a password reset request for your account.",
