--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -6,6 +6,7 @@
     "A Timeout Occurred": "发生超时",
     "Accept": "接受",
     "Accepted": "已接受",
+    "Account Password Login": "账户密码登录",
     "Action": "操作",
     "Actions": "操作",
     "Add": "添加",
@@ -17,6 +18,7 @@
     "Already Reported": "已上报",
     "Archive": "档案",
     "Are you sure you want to delete your account?": "您确定要删除您的帐户吗？",
+    "Are you sure you want to log out?": "你确定要登出吗？",
     "Assign": "分配",
     "Associate": "联系",
     "Attach": "附加",
@@ -25,6 +27,7 @@
     "Bandwidth Limit Exceeded": "超出带宽限制",
     "Browse": "浏览",
     "Cancel": "取消",
+    "Captcha": "验证码",
     "Choose": "选择",
     "Choose :name": "选择:name",
     "Choose File": "选择文件",
@@ -33,6 +36,7 @@
     "Click to copy": "点击复制",
     "Client Closed Request": "客户端关闭请求",
     "Close": "关闭",
+    "Code": "验证码",
     "Collapse": "坍塌",
     "Collapse All": "全部收缩",
     "Comment": "评论",
@@ -74,6 +78,7 @@
     "Export": "出口",
     "Export :name": "Export :name",
     "Failed Dependency": "失败的依赖",
+    "Failure": "失败",
     "File": "文件",
     "Files": "文件",
     "Forbidden": "访问被拒绝",
@@ -88,6 +93,7 @@
     "Hide": "隐藏",
     "Hide :name": "隐藏 :name",
     "Home": "家",
+    "Home Page": "首页",
     "HTTP Version Not Supported": "HTTP版本不支持",
     "I'm a teapot": "我是一个茶壶",
     "If you did not create an account, no further action is required.": "如果您未注册帐号，请忽略此邮件。",
@@ -157,7 +163,9 @@
     "Payload Too Large": "请求实体过大",
     "Payment Required": "需要付款",
     "Permanent Redirect": "永久重定向",
+    "Phone": "电话",
     "Please click the button below to verify your email address.": "请点击下面按钮验证您的 E-mail：",
+    "Please enter :name": "请输入:name",
     "Precondition Failed": "前提条件未满足",
     "Precondition Required": "前提要求",
     "Preview": "预览",
@@ -165,12 +173,14 @@
     "Processing": "处理中",
     "Profile": "资料",
     "Profile Information": "账户资料",
+    "Prompt": "提示",
     "Proxy Authentication Required": "需要代理验证",
     "Railgun Error": "轨道炮错误",
     "Range Not Satisfiable": "请求范围不符合",
     "Record": "记录",
     "Regards": "致敬",
     "Register": "注册",
+    "Register Now": "现在注册",
     "Remember me": "记住我",
     "Request Header Fields Too Large": "请求标头字段太大",
     "Request Timeout": "请求超时",
@@ -193,6 +203,7 @@
     "Select": "选择",
     "Select All": "全选",
     "Send": "发送",
+    "Send Verification Code": "发送验证码",
     "Server Error": "服务器错误",
     "Service Unavailable": "服务不可用",
     "Session Has Expired": "会话已过期",
@@ -202,12 +213,15 @@
     "Show All": "显示所有",
     "Showing": "显示中",
     "Sign In": "登入",
+    "SMS Verification Code": "短信验证码",
+    "SMS Verification Code Login": "短信验证码登录",
     "Solve": "解决",
     "SSL Handshake Failed": "SSL握手失败",
     "Start": "开始",
     "Stop": "停止",
     "Submit": "提交",
     "Subscribe": "订阅",
+    "Success": "成功",
     "Switch": "转变",
     "Switch To Role": "切换角色",
     "Switching Protocols": "切换协议",
@@ -243,11 +257,14 @@
     "URI Too Long": "URI太长了",
     "Use Proxy": "使用代理",
     "User": "用户",
+    "Username": "用户名",
     "Variant Also Negotiates": "变体协商",
     "Verify Email Address": "验证 E-mail",
     "View": "查看",
     "View :name": "查看 :name",
     "Web Server is Down": "Web服务器已关闭",
+    "Welcome": "欢迎",
+    "Welcome to :name!": "欢迎来到 :name!",
     "Whoops!": "哎呀！",
     "Yes": "是的",
     "You are receiving this email because we received a password reset request for your account.": "您收到此电子邮件是因为我们收到了您帐户的密码重设请求。",
