翻译配置修改

--- a/lang/en.json
+++ b/lang/en.json
@@ -78,6 +78,31 @@
     "Export": "Export",
     "Export :name": "Export :name",
     "Failed Dependency": "Failed Dependency",
+    "Failed to add.": "Failed to add.",
+    "Failed to cancel.": "Failed to cancel.",
+    "Failed to clear.": "Failed to clear.",
+    "Failed to confirm.": "Failed to confirm.",
+    "Failed to copy.": "Failed to copy.",
+    "Failed to correct.": "Failed to correct.",
+    "Failed to create.": "Failed to create.",
+    "Failed to delete.": "Failed to delete.",
+    "Failed to export.": "Failed to export.",
+    "Failed to get access token.": "Failed to get access token.",
+    "Failed to grade.": "Failed to grade.",
+    "Failed to grant.": "Failed to grant.",
+    "Failed to import.": "Failed to import.",
+    "Failed to log in.": "Failed to log in.",
+    "Failed to pay.": "Failed to pay.",
+    "Failed to refresh.": "Failed to refresh.",
+    "Failed to remove.": "Failed to remove.",
+    "Failed to request.": "Failed to request.",
+    "Failed to restore.": "Failed to restore.",
+    "Failed to save.": "Failed to save.",
+    "Failed to search.": "Failed to search.",
+    "Failed to set.": "Failed to set.",
+    "Failed to update in batch.": "Failed to update in batch.",
+    "Failed to update.": "Failed to update.",
+    "Failed to upload.": "Failed to upload.",
     "Failure": "Failure",
     "File": "File",
     "Files": "Files",
@@ -222,6 +247,30 @@
     "Submit": "Submit",
     "Subscribe": "Subscribe",
     "Success": "Success",
+    "Successfully added.": "Successfully added.",
+    "Successfully cancelled.": "Successfully cancelled.",
+    "Successfully cleared.": "Successfully cleared.",
+    "Successfully confirmed.": "Successfully confirmed.",
+    "Successfully copied.": "Successfully copied.",
+    "Successfully corrected.": "Successfully corrected.",
+    "Successfully created.": "Successfully created.",
+    "Successfully deleted.": "Successfully deleted.",
+    "Successfully exported.": "Successfully exported.",
+    "Successfully graded.": "Successfully graded.",
+    "Successfully granted.": "Successfully granted.",
+    "Successfully imported.": "Successfully imported.",
+    "Successfully logged in.": "Successfully logged in.",
+    "Successfully paid.": "Successfully paid.",
+    "Successfully refreshed.": "Successfully refreshed.",
+    "Successfully removed.": "Successfully removed.",
+    "Successfully requested.": "Successfully requested.",
+    "Successfully restored.": "Successfully restored.",
+    "Successfully saved.": "Successfully saved.",
+    "Successfully searched.": "Successfully searched.",
+    "Successfully set.": "Successfully set.",
+    "Successfully updated in batch.": "Successfully updated in batch.",
+    "Successfully updated.": "Successfully updated.",
+    "Successfully uploaded.": "Successfully uploaded.",
     "Switch": "Switch",
     "Switch To Role": "Switch To Role",
     "Switching Protocols": "Switching Protocols",
@@ -259,6 +308,9 @@
     "User": "User",
     "Username": "Username",
     "Variant Also Negotiates": "Variant Also Negotiates",
+    "Verification code has been sent.": "Verification code has been sent.",
+    "Verification code has expired.": "Verification code has expired.",
+    "Verification code sending failed.": "Verification code sending failed.",
     "Verify Email Address": "Verify Email Address",
     "View": "View",
     "View :name": "View :name",
