--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -78,6 +78,31 @@
     "Export": "出口",
     "Export :name": "Export :name",
     "Failed Dependency": "失败的依赖",
+    "Failed to add.": "添加失败",
+    "Failed to cancel.": "取消失败",
+    "Failed to clear.": "清空失败",
+    "Failed to confirm.": "确认失败",
+    "Failed to copy.": "复制失败",
+    "Failed to correct.": "校正失败",
+    "Failed to create.": "创建失败",
+    "Failed to delete.": "删除失败",
+    "Failed to export.": "导出失败",
+    "Failed to get access token.": "获取access_token失败",
+    "Failed to grade.": "评分失败",
+    "Failed to grant.": "授权失败",
+    "Failed to import.": "导入失败",
+    "Failed to log in.": "登录失败",
+    "Failed to pay.": "支付失败",
+    "Failed to refresh.": "刷新失败",
+    "Failed to remove.": "移除失败",
+    "Failed to request.": "请求失败",
+    "Failed to restore.": "恢复失败",
+    "Failed to save.": "保存失败",
+    "Failed to search.": "搜索失败",
+    "Failed to set.": "设置失败",
+    "Failed to update in batch.": "批量更新失败",
+    "Failed to update.": "更新失败",
+    "Failed to upload.": "上传失败",
     "Failure": "失败",
     "File": "文件",
     "Files": "文件",
@@ -222,6 +247,30 @@
     "Submit": "提交",
     "Subscribe": "订阅",
     "Success": "成功",
+    "Successfully added.": "添加成功",
+    "Successfully cancelled.": "取消成功",
+    "Successfully cleared.": "清空成功",
+    "Successfully confirmed.": "确认成功",
+    "Successfully copied.": "复制成功",
+    "Successfully corrected.": "校正成功",
+    "Successfully created.": "创建成功",
+    "Successfully deleted.": "删除成功",
+    "Successfully exported.": "导出成功",
+    "Successfully graded.": "评分成功",
+    "Successfully granted.": "授权成功",
+    "Successfully imported.": "导入成功",
+    "Successfully logged in.": "登录成功",
+    "Successfully paid.": "支付成功",
+    "Successfully refreshed.": "刷新成功",
+    "Successfully removed.": "移除成功",
+    "Successfully requested.": "请求成功",
+    "Successfully restored.": "恢复成功",
+    "Successfully saved.": "保存成功",
+    "Successfully searched.": "搜索成功",
+    "Successfully set.": "设置成功",
+    "Successfully updated in batch.": "批量更新成功",
+    "Successfully updated.": "更新成功",
+    "Successfully uploaded.": "上传成功",
     "Switch": "转变",
     "Switch To Role": "切换角色",
     "Switching Protocols": "切换协议",
@@ -259,6 +308,9 @@
     "User": "用户",
     "Username": "用户名",
     "Variant Also Negotiates": "变体协商",
+    "Verification code has been sent.": "验证码已发送",
+    "Verification code has expired.": "验证码已过期",
+    "Verification code sending failed.": "验证码发送失败",
     "Verify Email Address": "验证 E-mail",
     "View": "查看",
     "View :name": "查看 :name",
