--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -144,6 +144,7 @@
     "Log In": "登录",
     "Log in": "登录",
     "Log Out": "登出",
+    "Logged Out": "已退出",
     "Login": "登录",
     "Logout": "登出",
     "Loop Detected": "检测到环路",
