--- a/lang/en.json
+++ b/lang/en.json
@@ -144,6 +144,7 @@
     "Log In": "Log In",
     "Log in": "Log in",
     "Log Out": "Log Out",
+    "Logged Out": "Logged Out",
     "Login": "Login",
     "Logout": "Logout",
     "Loop Detected": "Loop Detected",
