--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,12 @@
 {
     "(and :count more error)": "(and :count more error)",
     "(and :count more errors)": "(and :count more error)|(and :count more errors)|(and :count more errors)",
+    ":count in Total": ":count in Total",
+    ":count Notifications": ":count Notifications",
+    ":name List": ":name List",
+    ":name Manage": ":name Manage",
+    ":name Time": ":name Time",
+    "A beautiful day has begun!": "A beautiful day has begun!",
     "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
     "A new verification link has been sent to your email address.": "A new verification link has been sent to your email address.",
     "A Timeout Occurred": "A Timeout Occurred",
@@ -13,12 +19,16 @@
     "Add :name": "Add :name",
     "Admin": "Admin",
     "Agree": "Agree",
+    "All notifications": "All notifications",
     "All rights reserved.": "All rights reserved.",
     "Already registered?": "Already registered?",
     "Already Reported": "Already Reported",
     "Archive": "Archive",
+    "Are you sure you want to delete :name?": "Are you sure you want to delete :name?",
+    "Are you sure you want to delete this item?": "Are you sure you want to delete this item?",
     "Are you sure you want to delete your account?": "Are you sure you want to delete your account?",
     "Are you sure you want to log out?": "Are you sure you want to log out?",
+    "Are you sure you want to mark all unread notifications as read?": "Are you sure you want to mark all unread notifications as read?",
     "Assign": "Assign",
     "Associate": "Associate",
     "Attach": "Attach",
@@ -32,6 +42,7 @@
     "Choose :name": "Choose :name",
     "Choose File": "Choose File",
     "Choose Image": "Choose Image",
+    "Clear Messages": "Clear Messages",
     "Click here to re-send the verification email.": "Click here to re-send the verification email.",
     "Click to copy": "Click to copy",
     "Client Closed Request": "Client Closed Request",
@@ -49,12 +60,17 @@
     "Continue": "Continue",
     "Create": "Create",
     "Create :name": "Create :name",
+    "Create Role": "Create Role",
+    "Create User": "Create User",
     "Created": "Created",
     "Current Password": "Current Password",
     "Dashboard": "Dashboard",
     "Delete": "Delete",
     "Delete :name": "Delete :name",
     "Delete Account": "Delete Account",
+    "Delete Role": "Delete Role",
+    "Delete User": "Delete User",
+    "Description": "Description",
     "Detach": "Detach",
     "Details": "Details",
     "Disable": "Disable",
@@ -68,9 +84,12 @@
     "Email": "Email",
     "email": "The :attribute must be a valid email address.",
     "Email Password Reset Link": "Email Password Reset Link",
+    "Empty Notification": "Empty Notification",
     "Enable": "Enable",
     "Ensure your account is using a long, random password to stay secure.": "Ensure your account is using a long, random password to stay secure.",
+    "Environment": "Environment",
     "errors": "errors",
+    "Exit Fullscreen": "Exit Fullscreen",
     "Expand": "Expand",
     "Expand All": "Expand All",
     "Expectation Failed": "Expectation Failed",
@@ -78,6 +97,7 @@
     "Export": "Export",
     "Export :name": "Export :name",
     "Failed Dependency": "Failed Dependency",
+    "Failed to :name.": "Failed to :name.",
     "Failed to add.": "Failed to add.",
     "Failed to cancel.": "Failed to cancel.",
     "Failed to clear.": "Failed to clear.",
@@ -110,6 +130,7 @@
     "Forgot your password?": "Forgot your password?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.",
     "Found": "Found",
+    "Fullscreen": "Fullscreen",
     "Gateway Timeout": "Gateway Timeout",
     "Go Home": "Go Home",
     "Go to page :page": "Go to page :page",
@@ -130,11 +151,15 @@
     "Impersonation": "Impersonation",
     "Import": "Import",
     "Import :name": "Import :name",
+    "Information": "Information",
     "Insufficient Storage": "Insufficient Storage",
     "Internal Server Error": "Internal Server Error",
     "Introduction": "Introduction",
     "Invalid JSON was returned from the route.": "Invalid JSON was returned from the route.",
     "Invalid SSL Certificate": "Invalid SSL Certificate",
+    "Keywords": "Keywords",
+    "Language": "Language",
+    "length": "length",
     "Length Required": "Length Required",
     "Like": "Like",
     "Load": "Load",
@@ -149,11 +174,18 @@
     "Logout": "Logout",
     "Loop Detected": "Loop Detected",
     "Maintenance Mode": "Maintenance Mode",
+    "Mark": "Mark",
+    "Mark all as read": "Mark all as read",
+    "Mark as read": "Mark as read",
+    "Marked": "Marked",
+    "Marked all as read": "Marked all as read",
+    "Marked as read": "Marked as read",
     "Method Not Allowed": "Method Not Allowed",
     "Misdirected Request": "Misdirected Request",
     "Moved Permanently": "Moved Permanently",
     "Multi-Status": "Multi-Status",
     "Multiple Choices": "Multiple Choices",
+    "MySQL Version": "MySQL Version",
     "Name": "Name",
     "name": "name",
     "Network Authentication Required": "Network Authentication Required",
@@ -164,12 +196,15 @@
     "New Password": "New Password",
     "No": "No",
     "No Content": "No Content",
+    "No new notifications yet!": "No new notifications yet!",
     "Non-Authoritative Information": "Non-Authoritative Information",
     "Not Acceptable": "Not Acceptable",
     "Not Extended": "Not Extended",
     "Not Found": "Not Found",
     "Not Implemented": "Not Implemented",
     "Not Modified": "Not Modified",
+    "Notification Center": "Notification Center",
+    "Notification List": "Notification List",
     "of": "of",
     "OK": "OK",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.",
@@ -189,7 +224,13 @@
     "Payload Too Large": "Payload Too Large",
     "Payment Required": "Payment Required",
     "Permanent Redirect": "Permanent Redirect",
+    "Permission": "Permission",
+    "Permission List": "Permission List",
+    "Permission Manage": "Permission Manage",
+    "Permission Name": "Permission Name",
+    "Permission Title": "Permission Title",
     "Phone": "Phone",
+    "PHP Version": "PHP Version",
     "Please click the button below to verify your email address.": "Please click the button below to verify your email address.",
     "Please enter :name": "Please enter :name",
     "Precondition Failed": "Precondition Failed",
@@ -199,11 +240,14 @@
     "Processing": "Processing",
     "Profile": "Profile",
     "Profile Information": "Profile Information",
+    "Profile Photo": "Profile Photo",
     "Prompt": "Prompt",
     "Proxy Authentication Required": "Proxy Authentication Required",
     "Railgun Error": "Railgun Error",
     "Range Not Satisfiable": "Range Not Satisfiable",
+    "Read Notification": "Read Notification",
     "Record": "Record",
+    "Refresh": "Refresh",
     "Regards": "Regards",
     "Register": "Register",
     "Register Now": "Register Now",
@@ -211,6 +255,7 @@
     "Request Header Fields Too Large": "Request Header Fields Too Large",
     "Request Timeout": "Request Timeout",
     "Resend Verification Email": "Resend Verification Email",
+    "Reset": "Reset",
     "Reset Content": "Reset Content",
     "Reset Password": "Reset Password",
     "Reset Password Notification": "Reset Password Notification",
@@ -218,6 +263,17 @@
     "Restore :name": "Restore :name",
     "results": "results",
     "Retry With": "Retry With",
+    "Role": "Role",
+    "Role List": "Role List",
+    "Role Manage": "Role Manage",
+    "Role Name": "Role Name",
+    "Role Permission": "Role Permission",
+    "Role Permission Sync": "Role Permission Sync",
+    "Role Title": "Role Title",
+    "Role User": "Role User",
+    "Role User Assign": "Role User Assign",
+    "Role User Remove": "Role User Remove",
+    "Route": "Route",
     "Save": "Save",
     "Save & Close": "Save & Close",
     "Save & Return": "Save & Return",
@@ -231,6 +287,7 @@
     "Send": "Send",
     "Send Verification Code": "Send Verification Code",
     "Server Error": "Server Error",
+    "Server System": "Server System",
     "Service Unavailable": "Service Unavailable",
     "Session Has Expired": "Session Has Expired",
     "Settings": "Settings",
@@ -248,6 +305,7 @@
     "Submit": "Submit",
     "Subscribe": "Subscribe",
     "Success": "Success",
+    "Successfully :name.": "Successfully :name.",
     "Successfully added.": "Successfully added.",
     "Successfully cancelled.": "Successfully cancelled.",
     "Successfully cleared.": "Successfully cleared.",
@@ -273,8 +331,10 @@
     "Successfully updated.": "Successfully updated.",
     "Successfully uploaded.": "Successfully uploaded.",
     "Switch": "Switch",
+    "Switch Theme Mode": "Switch Theme Mode",
     "Switch To Role": "Switch To Role",
     "Switching Protocols": "Switching Protocols",
+    "System Information": "System Information",
     "Tag": "Tag",
     "Tags": "Tags",
     "Temporary Redirect": "Temporary Redirect",
@@ -282,13 +342,16 @@
     "The given data was invalid.": "The given data was invalid.",
     "The response is not a streamed response.": "The response is not a streamed response.",
     "The response is not a view.": "The response is not a view.",
+    "There are new notifications!": "There are new notifications!",
     "This action is unauthorized.": "This action is unauthorized.",
     "This is a secure area of the application. Please confirm your password before continuing.": "This is a secure area of the application. Please confirm your password before continuing.",
     "This password reset link will expire in :count minutes.": "This password reset link will expire in :count minutes.",
+    "Title": "Title",
     "to": "to",
     "Toggle navigation": "Toggle navigation",
     "Too Early": "Too Early",
     "Too Many Requests": "Too Many Requests",
+    "Top Ten Notification": "Top Ten Notification",
     "Translate": "Translate",
     "Translate It": "Translate It",
     "Unauthorized": "Unauthorized",
@@ -296,31 +359,40 @@
     "Unknown Error": "Unknown Error",
     "Unpack": "Unpack",
     "Unprocessable Entity": "Unprocessable Entity",
+    "Unread": "Unread",
+    "Unread Only": "Unread Only",
     "Unsubscribe": "Unsubscribe",
     "Unsupported Media Type": "Unsupported Media Type",
     "Up": "Up",
     "Update": "Update",
     "Update :name": "Update :name",
     "Update Password": "Update Password",
+    "Update Role": "Update Role",
+    "Update User": "Update User",
     "Update your account's profile information and email address.": "Update your account's profile information and email address.",
     "Upgrade Required": "Upgrade Required",
     "URI Too Long": "URI Too Long",
     "Use Proxy": "Use Proxy",
     "User": "User",
+    "User List": "User List",
+    "User Setting": "User Setting",
     "Username": "Username",
     "Variant Also Negotiates": "Variant Also Negotiates",
     "Verification code has been sent.": "Verification code has been sent.",
     "Verification code has expired.": "Verification code has expired.",
     "Verification code sending failed.": "Verification code sending failed.",
     "Verify Email Address": "Verify Email Address",
+    "Version": "Version",
     "View": "View",
     "View :name": "View :name",
+    "View Now": "View Now",
     "Web Server is Down": "Web Server is Down",
     "Welcome": "Welcome",
     "Welcome to :name!": "Welcome to :name!",
     "Whoops!": "Whoops!",
     "Yes": "Yes",
     "You are receiving this email because we received a password reset request for your account.": "You are receiving this email because we received a password reset request for your account.",
+    "You have :count unread notifications.": "You have :count unread notifications.",
     "You're logged in!": "You're logged in!",
     "Your email address is unverified.": "Your email address is unverified."
 }
