--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -1,6 +1,12 @@
 {
     "(and :count more error)": "(还有 :count 个错误)",
     "(and :count more errors)": "(还有 :count 个错误)|(以及另外 :count 个错误)|(以及另外 :count 个错误)",
+    ":count in Total": "共 :count 条",
+    ":count Notifications": ":count 条通知",
+    ":name List": ":name 列表",
+    ":name Manage": ":name 管理",
+    ":name Time": ":name时间",
+    "A beautiful day has begun!": "美好的一天开始喽！",
     "A new verification link has been sent to the email address you provided during registration.": "一个新的验证链接已经发送至您在注册时提供的电子邮件地址。",
     "A new verification link has been sent to your email address.": "一个新的验证链接已经发送到你的电子邮件地址。",
     "A Timeout Occurred": "发生超时",
@@ -11,14 +17,18 @@
     "Actions": "操作",
     "Add": "添加",
     "Add :name": "添加 :name",
-    "Admin": "行政",
+    "Admin": "管理员",
     "Agree": "同意",
+    "All notifications": "全部通知",
     "All rights reserved.": "版权所有。",
     "Already registered?": "已注册？",
     "Already Reported": "已上报",
     "Archive": "档案",
+    "Are you sure you want to delete :name?": "您确定要删除:name吗?",
+    "Are you sure you want to delete this item?": "您确定要删除此项吗？",
     "Are you sure you want to delete your account?": "您确定要删除您的帐户吗？",
     "Are you sure you want to log out?": "你确定要登出吗？",
+    "Are you sure you want to mark all unread notifications as read?": "确定要将所有未读通知标记为已读吗？",
     "Assign": "分配",
     "Associate": "联系",
     "Attach": "附加",
@@ -32,12 +42,13 @@
     "Choose :name": "选择:name",
     "Choose File": "选择文件",
     "Choose Image": "选择图片",
+    "Clear Messages": "清空消息",
     "Click here to re-send the verification email.": "点击这里重新发送验证邮件。",
     "Click to copy": "点击复制",
     "Client Closed Request": "客户端关闭请求",
     "Close": "关闭",
     "Code": "验证码",
-    "Collapse": "坍塌",
+    "Collapse": "收缩",
     "Collapse All": "全部收缩",
     "Comment": "评论",
     "Confirm": "确认",
@@ -49,17 +60,22 @@
     "Continue": "继续请求",
     "Create": "创建",
     "Create :name": "创建 :name 个",
+    "Create Role": "创建角色",
+    "Create User": "创建用户",
     "Created": "已创建",
     "Current Password": "当前密码",
     "Dashboard": "控制面板",
     "Delete": "删除",
     "Delete :name": "删除 :name 个",
     "Delete Account": "删除账户",
+    "Delete Role": "删除角色",
+    "Delete User": "删除用户",
+    "Description": "描述",
     "Detach": "分离",
     "Details": "详情",
     "Disable": "禁用",
     "Discard": "丢弃",
-    "Done": "完毕",
+    "Done": "完成",
     "Down": "向下",
     "Duplicate": "复制",
     "Duplicate :name": "重复：名称",
@@ -68,16 +84,20 @@
     "Email": "电子邮箱",
     "email": ":Attribute 不是一个合法的邮箱。",
     "Email Password Reset Link": "电子邮件密码重置链接",
+    "Empty Notification": "清空通知",
     "Enable": "启用",
     "Ensure your account is using a long, random password to stay secure.": "确保您的账户使用足够长且随机的密码来保证安全。",
+    "Environment": "环境",
     "errors": "错误",
-    "Expand": "扩张",
+    "Exit Fullscreen": "退出全屏",
+    "Expand": "展开",
     "Expand All": "展开全部",
     "Expectation Failed": "期望不满足",
     "Explanation": "解释",
-    "Export": "出口",
-    "Export :name": "Export :name",
+    "Export": "导出",
+    "Export :name": "导出 :name",
     "Failed Dependency": "失败的依赖",
+    "Failed to :name.": ":name 失败",
     "Failed to add.": "添加失败",
     "Failed to cancel.": "取消失败",
     "Failed to clear.": "清空失败",
@@ -110,6 +130,7 @@
     "Forgot your password?": "忘记密码？",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "忘记密码？没关系。输入您的电子邮件地址，我们将通过电子邮件向您发送密码重置链接，让您重置一个新的密码。",
     "Found": "临时移动",
+    "Fullscreen": "全屏",
     "Gateway Timeout": "网关超时",
     "Go Home": "回首页",
     "Go to page :page": "前往第 :page 页",
@@ -128,13 +149,17 @@
     "Image": "图像",
     "Impersonate": "模拟登录",
     "Impersonation": "冒充",
-    "Import": "进口",
-    "Import :name": "进口 :name",
+    "Import": "导入",
+    "Import :name": "导入 :name",
+    "Information": "信息",
     "Insufficient Storage": "存储空间不足",
     "Internal Server Error": "内部服务器错误",
     "Introduction": "介绍",
     "Invalid JSON was returned from the route.": "从路由返回无效的 JSON。",
     "Invalid SSL Certificate": "无效的SSL证书",
+    "Keywords": "关键词",
+    "Language": "语言",
+    "length": "length",
     "Length Required": "长度要求",
     "Like": "喜欢",
     "Load": "加载",
@@ -149,11 +174,18 @@
     "Logout": "登出",
     "Loop Detected": "检测到环路",
     "Maintenance Mode": "服务不可用",
+    "Mark": "标记",
+    "Mark all as read": "全部标记为已读",
+    "Mark as read": "标记为已读",
+    "Marked": "标记",
+    "Marked all as read": "已全部标记为已读",
+    "Marked as read": "已标记为已读",
     "Method Not Allowed": "方法不允许",
     "Misdirected Request": "错误的请求",
     "Moved Permanently": "已永久移动",
     "Multi-Status": "多状态",
     "Multiple Choices": "多种选择",
+    "MySQL Version": "MySQL版本",
     "Name": "姓名",
     "name": "姓名",
     "Network Authentication Required": "需要网络验证",
@@ -164,12 +196,15 @@
     "New Password": "新的密码",
     "No": "不",
     "No Content": "无内容",
+    "No new notifications yet!": "还没有新通知！",
     "Non-Authoritative Information": "非权威信息",
     "Not Acceptable": "无法接受",
     "Not Extended": "未延期",
     "Not Found": "页面不存在",
     "Not Implemented": "未实现",
     "Not Modified": "未修改",
+    "Notification Center": "通知中心",
+    "Notification List": "通知列表",
     "of": "于",
     "OK": "请求成功",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "一旦您的账户被删除，其所有资源和数据将被永久删除。在删除您的账户之前，请下载您希望保留的任何数据或信息。",
@@ -189,7 +224,13 @@
     "Payload Too Large": "请求实体过大",
     "Payment Required": "需要付款",
     "Permanent Redirect": "永久重定向",
+    "Permission": "权限",
+    "Permission List": "权限列表",
+    "Permission Manage": "权限管理",
+    "Permission Name": "权限标识",
+    "Permission Title": "权限名称",
     "Phone": "电话",
+    "PHP Version": "PHP版本",
     "Please click the button below to verify your email address.": "请点击下面按钮验证您的 E-mail：",
     "Please enter :name": "请输入:name",
     "Precondition Failed": "前提条件未满足",
@@ -199,11 +240,14 @@
     "Processing": "处理中",
     "Profile": "资料",
     "Profile Information": "账户资料",
+    "Profile Photo": "头像",
     "Prompt": "提示",
     "Proxy Authentication Required": "需要代理验证",
     "Railgun Error": "轨道炮错误",
     "Range Not Satisfiable": "请求范围不符合",
+    "Read Notification": "读取通知",
     "Record": "记录",
+    "Refresh": "刷新",
     "Regards": "致敬",
     "Register": "注册",
     "Register Now": "现在注册",
@@ -211,6 +255,7 @@
     "Request Header Fields Too Large": "请求标头字段太大",
     "Request Timeout": "请求超时",
     "Resend Verification Email": "重新发送验证邮件",
+    "Reset": "重置",
     "Reset Content": "重置内容",
     "Reset Password": "重置密码",
     "Reset Password Notification": "重置密码通知",
@@ -218,10 +263,21 @@
     "Restore :name": "恢复:name",
     "results": "结果",
     "Retry With": "重试",
+    "Role": "角色",
+    "Role List": "角色列表",
+    "Role Manage": "角色管理",
+    "Role Name": "角色标识",
+    "Role Permission": "角色所属权限",
+    "Role Permission Sync": "角色赋予权限",
+    "Role Title": "角色名称",
+    "Role User": "角色所属用户",
+    "Role User Assign": "角色添加用户",
+    "Role User Remove": "角色移除用户",
+    "Route": "路由",
     "Save": "保存",
     "Save & Close": "保存并关闭",
     "Save & Return": "保存并返回",
-    "Save :name": "节省 :name",
+    "Save :name": "保存 :name",
     "Saved.": "已保存。",
     "Search": "搜索",
     "Search :name": "搜索 :name",
@@ -231,10 +287,11 @@
     "Send": "发送",
     "Send Verification Code": "发送验证码",
     "Server Error": "服务器错误",
+    "Server System": "服务器系统",
     "Service Unavailable": "服务不可用",
     "Session Has Expired": "会话已过期",
     "Settings": "设置",
-    "Show": "展示",
+    "Show": "显示",
     "Show :name": "显示 :name",
     "Show All": "显示所有",
     "Showing": "显示中",
@@ -248,6 +305,7 @@
     "Submit": "提交",
     "Subscribe": "订阅",
     "Success": "成功",
+    "Successfully :name.": ":name 成功",
     "Successfully added.": "添加成功",
     "Successfully cancelled.": "取消成功",
     "Successfully cleared.": "清空成功",
@@ -272,9 +330,11 @@
     "Successfully updated in batch.": "批量更新成功",
     "Successfully updated.": "更新成功",
     "Successfully uploaded.": "上传成功",
-    "Switch": "转变",
+    "Switch": "切换",
+    "Switch Theme Mode": "切换主题模式",
     "Switch To Role": "切换角色",
     "Switching Protocols": "切换协议",
+    "System Information": "系统信息",
     "Tag": "标签",
     "Tags": "标签",
     "Temporary Redirect": "临时重定向",
@@ -282,45 +342,57 @@
     "The given data was invalid.": "给定的数据无效。",
     "The response is not a streamed response.": "该响应不是流式响应。",
     "The response is not a view.": "响应不是视图。",
+    "There are new notifications!": "有新通知！",
     "This action is unauthorized.": "此操作未经授权。",
     "This is a secure area of the application. Please confirm your password before continuing.": "请在继续之前确认您的密码。",
     "This password reset link will expire in :count minutes.": "这个重设密码链接将会在 :count 分钟后失效。",
+    "Title": "标题",
     "to": "至",
     "Toggle navigation": "切换导航",
     "Too Early": "太早了",
     "Too Many Requests": "请求次数过多。",
+    "Top Ten Notification": "近十条通知",
     "Translate": "翻译",
     "Translate It": "翻译它",
     "Unauthorized": "未授权",
     "Unavailable For Legal Reasons": "法律原因不可用",
     "Unknown Error": "未知错误",
-    "Unpack": "打开包装",
+    "Unpack": "打开",
     "Unprocessable Entity": "不可处理的实体",
+    "Unread": "未读",
+    "Unread Only": "仅未读",
     "Unsubscribe": "退订",
     "Unsupported Media Type": "不支持的媒体类型",
     "Up": "向上",
     "Update": "更新",
     "Update :name": "更新:name",
     "Update Password": "更新密码",
+    "Update Role": "更新角色",
+    "Update User": "更新用户",
     "Update your account's profile information and email address.": "更新您的账户资料和电子邮件地址。",
     "Upgrade Required": "需要升级",
     "URI Too Long": "URI太长了",
     "Use Proxy": "使用代理",
     "User": "用户",
+    "User List": "用户列表",
+    "User Setting": "用户设置",
     "Username": "用户名",
     "Variant Also Negotiates": "变体协商",
     "Verification code has been sent.": "验证码已发送",
     "Verification code has expired.": "验证码已过期",
     "Verification code sending failed.": "验证码发送失败",
     "Verify Email Address": "验证 E-mail",
+    "Version": "版本",
     "View": "查看",
     "View :name": "查看 :name",
+    "View Now": "立即查看",
     "Web Server is Down": "Web服务器已关闭",
     "Welcome": "欢迎",
-    "Welcome to :name!": "欢迎来到 :name!",
+    "Welcome to :name!": "欢迎来到 :name！",
     "Whoops!": "哎呀！",
     "Yes": "是的",
     "You are receiving this email because we received a password reset request for your account.": "您收到此电子邮件是因为我们收到了您帐户的密码重设请求。",
+    "You have :count unread notifications.": "您有 :count 条未读通知。",
     "You're logged in!": "您已登录!",
     "Your email address is unverified.": "您的电子邮箱未经验证。"
 }
