更新语言包

--- a/lang/en.json
+++ b/lang/en.json
@@ -7,6 +7,7 @@
     ":name Manage": ":name Manage",
     ":name Time": ":name Time",
     "A beautiful day has begun!": "A beautiful day has begun!",
+    "A decryption key is required.": "A decryption key is required.",
     "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
     "A new verification link has been sent to your email address.": "A new verification link has been sent to your email address.",
     "A Timeout Occurred": "A Timeout Occurred",
@@ -86,8 +87,12 @@
     "Email Password Reset Link": "Email Password Reset Link",
     "Empty Notification": "Empty Notification",
     "Enable": "Enable",
+    "Encrypted environment file already exists.": "Encrypted environment file already exists.",
+    "Encrypted environment file not found.": "Encrypted environment file not found.",
     "Ensure your account is using a long, random password to stay secure.": "Ensure your account is using a long, random password to stay secure.",
     "Environment": "Environment",
+    "Environment file already exists.": "Environment file already exists.",
+    "Environment file not found.": "Environment file not found.",
     "errors": "errors",
     "Exit Fullscreen": "Exit Fullscreen",
     "Expand": "Expand",
@@ -155,6 +160,7 @@
     "Insufficient Storage": "Insufficient Storage",
     "Internal Server Error": "Internal Server Error",
     "Introduction": "Introduction",
+    "Invalid filename.": "Invalid filename.",
     "Invalid JSON was returned from the route.": "Invalid JSON was returned from the route.",
     "Invalid SSL Certificate": "Invalid SSL Certificate",
     "Keywords": "Keywords",
@@ -249,6 +255,7 @@
     "Record": "Record",
     "Refresh": "Refresh",
     "Regards": "Regards",
+    "Regards,": "Regards,",
     "Register": "Register",
     "Register Now": "Register Now",
     "Remember me": "Remember me",
