--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -7,6 +7,7 @@
     ":name Manage": ":name 管理",
     ":name Time": ":name时间",
     "A beautiful day has begun!": "美好的一天开始喽！",
+    "A decryption key is required.": "A decryption key is required.",
     "A new verification link has been sent to the email address you provided during registration.": "一个新的验证链接已经发送至您在注册时提供的电子邮件地址。",
     "A new verification link has been sent to your email address.": "一个新的验证链接已经发送到你的电子邮件地址。",
     "A Timeout Occurred": "发生超时",
@@ -86,8 +87,12 @@
     "Email Password Reset Link": "电子邮件密码重置链接",
     "Empty Notification": "清空通知",
     "Enable": "启用",
+    "Encrypted environment file already exists.": "Encrypted environment file already exists.",
+    "Encrypted environment file not found.": "Encrypted environment file not found.",
     "Ensure your account is using a long, random password to stay secure.": "确保您的账户使用足够长且随机的密码来保证安全。",
     "Environment": "环境",
+    "Environment file already exists.": "Environment file already exists.",
+    "Environment file not found.": "Environment file not found.",
     "errors": "错误",
     "Exit Fullscreen": "退出全屏",
     "Expand": "展开",
@@ -155,6 +160,7 @@
     "Insufficient Storage": "存储空间不足",
     "Internal Server Error": "内部服务器错误",
     "Introduction": "介绍",
+    "Invalid filename.": "Invalid filename.",
     "Invalid JSON was returned from the route.": "从路由返回无效的 JSON。",
     "Invalid SSL Certificate": "无效的SSL证书",
     "Keywords": "关键词",
@@ -249,6 +255,7 @@
     "Record": "记录",
     "Refresh": "刷新",
     "Regards": "致敬",
+    "Regards,": "致敬,",
     "Register": "注册",
     "Register Now": "现在注册",
     "Remember me": "记住我",
