展开和收起翻译

--- a/lang/en.json
+++ b/lang/en.json
@@ -50,6 +50,7 @@
     "Close": "Close",
     "Code": "Code",
     "Collapse": "Collapse",
+    "Collapse :name": "Collapse :name",
     "Collapse All": "Collapse All",
     "Comment": "Comment",
     "Confirm": "Confirm",
@@ -96,6 +97,7 @@
     "errors": "errors",
     "Exit Fullscreen": "Exit Fullscreen",
     "Expand": "Expand",
+    "Expand :name": "Expand :name",
     "Expand All": "Expand All",
     "Expectation Failed": "Expectation Failed",
     "Explanation": "Explanation",
