--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -50,6 +50,7 @@
     "Close": "关闭",
     "Code": "验证码",
     "Collapse": "收缩",
+    "Collapse :name": "收起:name",
     "Collapse All": "全部收缩",
     "Comment": "评论",
     "Confirm": "确认",
@@ -96,6 +97,7 @@
     "errors": "错误",
     "Exit Fullscreen": "退出全屏",
     "Expand": "展开",
+    "Expand :name": "展开:name",
     "Expand All": "展开全部",
     "Expectation Failed": "期望不满足",
     "Explanation": "解释",
